--- a/mario/package.json
+++ b/mario/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "ajv": "^6.5.1",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
@@ -28,6 +29,7 @@
     "less-loader": "^4.0.5",
     "lodash": "^4.17.5",
     "node-sass": "^4.7.2",
+    "request-promise": "^4.2.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "url-loader": "^0.6.2",
